centos.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    env: test
    team: dev
  name: centos
spec:
  containers:
  - image: centos
    name: centos
    stdin: true
    tty: true

# kubectl run -i -t centos --image=centos
