kuard-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard-pod
  labels:
    name: kuard-pod
spec:
  volumes:
    - name: "kuard-data"
      hostPath:
        path: "/data"  
  containers:
  - image: gcr.io/kuar-demo/kuard-amd64:1
    name: kuard
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
    volumeMounts:
    - mountPath: "/data"
      name: "kuard-data"
