kuard2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard2
  labels:
    name: kuard
    class: class3
spec:
  containers:
  - image: gcr.io/kuar-demo/kuard-amd64:1
    name: kuard
    livenessProbe:
      httpGet:
        path: /healthy
        port: 8080
      initialDelaySeconds: 5
      timeoutSeconds: 1
      periodSeconds: 10
      failureThreshold: 3
    readinessProbe:
      httpGet:
        path: /ready
        port: 8080
      periodSeconds: 2
      initialDelaySeconds: 0
      failureThreshold: 3
      successThreshold: 1
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
