kuard3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard3
  labels:
    app: k8class
spec:
  containers:
  - image: gcr.io/kuar-demo/kuard-amd64:1
    name: kuard
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
