kubia-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-pod
  labels:
    name: kubia-pod
spec:
  containers:
    - name: kubia
      image: luksa/kubia
      ports:
      - name: http
        containerPort: 8080
