kubia.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia
  labels:
    name: kubia
spec:
  containers:
  - name: kubia
    image: luksa/kubia
    ports:
    - name: http
      containerPort: 8080
