nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  nodeSelector:
    storage: ssd
  containers:
  - image: nginx
    name: nginx
