kuard-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-kuard
spec:
  type: NodePort
  ports:
  - name: http
    nodePort: 32000 # Listening port on External IPs
    port: 8080 # Listening port on Internal IPs
    protocol: TCP
    targetPort: 8080 # Pod’s listening port
  selector:
    app: k8class
