kuard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard-service
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    name: kuard-pod
