kubia-rc-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: kubia-rc-service
  name: kubia-rc-service
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8080
  selector:
    app: kubia
  sessionAffinity: None
  type: ClusterIP
