kubia-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-service
  labels:
    name: kubia-service
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    name: kubia-pod
